JumpScript/tests/baselines/reference/unusedPrivateVariableInClass2.errors.txt
tests/cases/compiler/unusedPrivateVariableInClass2.jump(2,13): error TS6133: 'x' is declared but its value is never read.
tests/cases/compiler/unusedPrivateVariableInClass2.jump(3,13): error TS6133: 'y' is declared but its value is never read.


==== tests/cases/compiler/unusedPrivateVariableInClass2.jump (2 errors) ====
    class greeter {
        private x: string;
                ~
!!! error TS6133: 'x' is declared but its value is never read.
        private y: string;
                ~
!!! error TS6133: 'y' is declared but its value is never read.
    }